--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "srcs/libftprintf"]
-	path = srcs/libftprintf
-	url = https://github.com/jvankrieken/libftprintf
+[submodule "libftprintf"]
+	path = libftprintf
+	url = https://github.com/dickvankrieken/libftprintf
